fix receive tab wallet icon slider on tablet

--- a/src/sass/common.scss
+++ b/src/sass/common.scss
@@ -112,3 +112,7 @@ ion-header-bar{
 .bold-text{
   font-weight: bold !important;
 }
+
+.card{
+  box-shadow:  0 2px 3px rgba(0, 0, 0, 0.3);
+}
